# PhysicsBasedModeling-Core

./: README.md
PhysBAM/: CMakeLists.txt
PhysBAM/Public_Library/PhysBAM_Geometry/Basic_Geometry/: BOUNDED_HORIZONTAL_PLANE.cpp  CYLINDER.cpp  ELLIPSOID.cpp  PLANE.cpp  POLYGON.cpp  SEGMENT_2D.cpp  SEGMENT_3D.cpp  TETRAHEDRON.cpp  TRIANGLE_3D.cpp
PhysBAM/Public_Library/PhysBAM_Geometry/Collision_Detection/: COLLISION_GEOMETRY_SPATIAL_PARTITION.cpp
PhysBAM/Public_Library/PhysBAM_Geometry/Collisions/: COLLISION_GEOMETRY.cpp  COLLISION_GEOMETRY_COLLECTION.cpp  POINT_REPULSION.cpp  RIGID_COLLISION_GEOMETRY_1D.cpp  RIGID_COLLISION_GEOMETRY_2D.cpp  RIGID_COLLISION_GEOMETRY_3D.cpp
PhysBAM/Public_Library/PhysBAM_Geometry/Collisions_And_Grids/: GRID_BASED_COLLISION_GEOMETRY.cpp  OBJECTS_IN_CELL.cpp
PhysBAM/Public_Library/PhysBAM_Geometry/Continuous_Collision_Detection/: EDGE_EDGE_COLLISION.cpp
PhysBAM/Public_Library/PhysBAM_Geometry/Fourier_Transforms_Calculations/: DEEP_WATER_EVOLUTION_HEIGHTS.cpp
PhysBAM/Public_Library/PhysBAM_Geometry/Fracture/: CUTTING_SIMPLEX.cpp  CUTTING_SIMPLEX.h  CUTTING_SIMPLEX_COORDINATE.h
PhysBAM/Public_Library/PhysBAM_Geometry/Grids_Uniform_Advection_Collidable/: ADVECTION_SEMI_LAGRANGIAN_COLLIDABLE_CELL_UNIFORM.cpp  ADVECTION_SEMI_LAGRANGIAN_COLLIDABLE_FACE_SLIP_UNIFORM.cpp
PhysBAM/Public_Library/PhysBAM_Geometry/Grids_Uniform_Collisions/: CUT_CELL_COMPUTATIONS.cpp  GRID_BASED_COLLISION_GEOMETRY_UNIFORM.cpp
PhysBAM/Public_Library/PhysBAM_Geometry/Grids_Uniform_Computations/: COLLIDABLE_GRADIENT_UNIFORM.h  DUALCONTOUR_2D.cpp  DUALCONTOUR_3D.cpp  LEVELSET_MAKER_UNIFORM.cpp  LEVELSET_MAKER_UNIFORM_2D.cpp
PhysBAM/Public_Library/PhysBAM_Geometry/Grids_Uniform_Interpolation_Collidable/: FACE_LOOKUP_COLLIDABLE_SLIP_UNIFORM.cpp  LINEAR_INTERPOLATION_COLLIDABLE_CELL_UNIFORM.cpp
PhysBAM/Public_Library/PhysBAM_Geometry/Grids_Uniform_Level_Sets/: EXTRAPOLATION_UNIFORM.cpp  EXTRAPOLATION_UNIFORM.h  FAST_LEVELSET.cpp  FAST_MARCHING_METHOD_UNIFORM.cpp  LEVELSET_1D.cpp  LEVELSET_1D.h  LEVELSET_2D.cpp  LEVELSET_2D.h  LEVELSET_3D.cpp  LEVELSET_3D.h  LEVELSET_MULTIPLE.cpp  LEVELSET_MULTIPLE_UNIFORM.cpp  LEVELSET_UNIFORM.cpp
PhysBAM/Public_Library/PhysBAM_Geometry/Grids_Uniform_PDE_Linear/: LAPLACE_COLLIDABLE_UNIFORM.h  POISSON_COLLIDABLE_UNIFORM.h  PROJECTION_COLLIDABLE_UNIFORM.cpp
PhysBAM/Public_Library/PhysBAM_Geometry/Implicit_Objects_Uniform/: LEVELSET_IMPLICIT_OBJECT.cpp
PhysBAM/Public_Library/PhysBAM_Geometry/Interpolation_Collidable/: LINEAR_INTERPOLATION_UNIFORM_GEOMETRY.cpp
PhysBAM/Public_Library/PhysBAM_Geometry/Level_Sets/: EXTRAPOLATION_HIGHER_ORDER.cpp  LEVELSET_POLICY.h
PhysBAM/Public_Library/PhysBAM_Geometry/Parallel_Computation/: LAPLACE_COLLIDABLE_MPI.cpp
PhysBAM/Public_Library/PhysBAM_Geometry/Registry/: STRUCTURE_REGISTRY.cpp
PhysBAM/cmake/: OptionsConfig.cmake
(+137 files in other folders)
